corpus/kernel/6.8/admin-guide/media/v4l-drivers.md
---
collection: kernel
version: "6.8"
title: "7. Video4Linux (V4L) driver-specific documentation"
source_url: https://www.kernel.org/doc/html/v6.8/admin-guide/media/v4l-drivers.html
fetched_at: 2026-08-21T03:55:48+00:00
---
# 7. Video4Linux (V4L) driver-specific documentation

- [7.1. The bttv driver](bttv.md)
  - [7.1.1. Release notes for bttv](bttv.md#release-notes-for-bttv)
  - [7.1.2. Make bttv work with your card](bttv.md#make-bttv-work-with-your-card)
  - [7.1.3. Autodetecting cards](bttv.md#autodetecting-cards)
  - [7.1.4. Still doesn't work?](bttv.md#still-doesn-t-work)
  - [7.1.5. Modprobe options](bttv.md#modprobe-options)
  - [7.1.6. If the box freezes hard with bttv](bttv.md#if-the-box-freezes-hard-with-bttv)
  - [7.1.7. Bttv quirks](bttv.md#bttv-quirks)
  - [7.1.8. Cards](bttv.md#cards)
  - [7.1.9. Chips used at bttv devices](bttv.md#chips-used-at-bttv-devices)
  - [7.1.10. Specs](bttv.md#specs)
  - [7.1.11. Thanks](bttv.md#thanks)
  - [7.1.12. Contributors](bttv.md#contributors)
- [7.2. The cafe_ccic driver](cafe_ccic.md)
  - [7.2.1. Introduction](cafe_ccic.md#introduction)
  - [7.2.2. Load time options](cafe_ccic.md#load-time-options)
- [7.3. The cx88 driver](cx88.md)
  - [7.3.1. Current status](cx88.md#current-status)
  - [7.3.2. How to add support for new cards](cx88.md#how-to-add-support-for-new-cards)
- [7.4. The Samsung S5P/Exynos4 FIMC driver](fimc.md)
  - [7.4.1. Supported SoCs](fimc.md#supported-socs)
  - [7.4.2. Supported features](fimc.md#supported-features)
  - [7.4.3. Not currently supported](fimc.md#not-currently-supported)
  - [7.4.4. User space interfaces](fimc.md#user-space-interfaces)
  - [7.4.5. 5. Device mapping to video and subdev device nodes](fimc.md#device-mapping-to-video-and-subdev-device-nodes)
  - [7.4.6. 7. Build](fimc.md#build)
- [7.5. i.MX Video Capture Driver](imx.md)
  - [7.5.1. Introduction](imx.md#introduction)
  - [7.5.2. Features](imx.md#features)
  - [7.5.3. Topology](imx.md#topology)
  - [7.5.4. Entities](imx.md#entities)
  - [7.5.5. imx6-mipi-csi2](imx.md#imx6-mipi-csi2)
  - [7.5.6. ipuX_csiY_mux](imx.md#ipux-csiy-mux)
  - [7.5.7. ipuX_csiY](imx.md#ipux-csiy)
  - [7.5.8. Cropping in ipuX_csiY](imx.md#cropping-in-ipux-csiy)
  - [7.5.9. Frame Skipping in ipuX_csiY](imx.md#frame-skipping-in-ipux-csiy)
  - [7.5.10. Frame Interval Monitor in ipuX_csiY](imx.md#frame-interval-monitor-in-ipux-csiy)
  - [7.5.11. ipuX_vdic](imx.md#ipux-vdic)
  - [7.5.12. ipuX_ic_prp](imx.md#ipux-ic-prp)
  - [7.5.13. ipuX_ic_prpenc](imx.md#ipux-ic-prpenc)
  - [7.5.14. ipuX_ic_prpvf](imx.md#ipux-ic-prpvf)
  - [7.5.15. Capture Pipelines](imx.md#capture-pipelines)
  - [7.5.16. Unprocessed Video Capture:](imx.md#unprocessed-video-capture)
  - [7.5.17. IC Direct Conversions:](imx.md#ic-direct-conversions)
  - [7.5.18. Motion Compensated De-interlace:](imx.md#motion-compensated-de-interlace)
  - [7.5.19. Usage Notes](imx.md#usage-notes)
  - [7.5.20. i.MX6Q SabreLite with OV5642 and OV5640](imx.md#i-mx6q-sabrelite-with-ov5642-and-ov5640)
  - [7.5.21. i.MX6Q SabreAuto with ADV7180 decoder](imx.md#i-mx6q-sabreauto-with-adv7180-decoder)
  - [7.5.22. i.MX6DL SabreAuto with ADV7180 decoder](imx.md#i-mx6dl-sabreauto-with-adv7180-decoder)
  - [7.5.23. i.MX6Q SabreSD with MIPI CSI-2 OV5640](imx.md#i-mx6q-sabresd-with-mipi-csi-2-ov5640)
  - [7.5.24. Known Issues](imx.md#known-issues)
  - [7.5.25. File list](imx.md#file-list)
  - [7.5.26. References](imx.md#references)
  - [7.5.27. Authors](imx.md#authors)
- [7.6. i.MX7 Video Capture Driver](imx7.md)
  - [7.6.1. Introduction](imx7.md#introduction)
  - [7.6.2. Entities](imx7.md#entities)
  - [7.6.3. imx-mipi-csi2](imx7.md#imx-mipi-csi2)
  - [7.6.4. csi-mux](imx7.md#csi-mux)
  - [7.6.5. csi](imx7.md#csi)
  - [7.6.6. Usage Notes](imx7.md#usage-notes)
  - [7.6.7. Warp7 with OV2680](imx7.md#warp7-with-ov2680)
  - [7.6.8. i.MX6ULL-EVK with OV5640](imx7.md#i-mx6ull-evk-with-ov5640)
  - [7.6.9. References](imx7.md#references)
- [7.7. Intel Image Processing Unit 3 (IPU3) Imaging Unit (ImgU) driver](ipu3.md)
  - [7.7.1. Introduction](ipu3.md#introduction)
  - [7.7.2. CIO2](ipu3.md#cio2)
  - [7.7.3. ImgU](ipu3.md#imgu)
  - [7.7.4. Configuring the Intel IPU3](ipu3.md#configuring-the-intel-ipu3)
  - [7.7.5. Example user space code for IPU3](ipu3.md#example-user-space-code-for-ipu3)
  - [7.7.6. Overview of IPU3 pipeline](ipu3.md#overview-of-ipu3-pipeline)
  - [7.7.7. References](ipu3.md#references)
- [7.8. The ivtv driver](ivtv.md)
  - [7.8.1. Features](ivtv.md#features)
  - [7.8.2. Additional features for the PVR-350 (CX23415 based)](ivtv.md#additional-features-for-the-pvr-350-cx23415-based)
  - [7.8.3. See also](ivtv.md#see-also)
  - [7.8.4. IRC](ivtv.md#irc)
  - [7.8.5. Devices](ivtv.md#devices)
  - [7.8.6. Base devices](ivtv.md#base-devices)
- [7.9. mgb4 sysfs interface](mgb4.md)
  - [7.9.1. Global (PCI card) parameters](mgb4.md#global-pci-card-parameters)
  - [7.9.2. Common FPDL3/GMSL input parameters](mgb4.md#common-fpdl3-gmsl-input-parameters)
  - [7.9.3. Common FPDL3/GMSL output parameters](mgb4.md#common-fpdl3-gmsl-output-parameters)
  - [7.9.4. FPDL3 specific input parameters](mgb4.md#fpdl3-specific-input-parameters)
  - [7.9.5. FPDL3 specific output parameters](mgb4.md#fpdl3-specific-output-parameters)
  - [7.9.6. GMSL specific input parameters](mgb4.md#gmsl-specific-input-parameters)
- [7.10. mgb4 mtd partitions](mgb4.md#mgb4-mtd-partitions)
- [7.11. mgb4 iio (triggers)](mgb4.md#mgb4-iio-triggers)
- [7.12. OMAP 3 Image Signal Processor (ISP) driver](omap3isp.md)
  - [7.12.1. Introduction](omap3isp.md#introduction)
  - [7.12.2. Split to subdevs](omap3isp.md#split-to-subdevs)
  - [7.12.3. Controlling the OMAP 3 ISP](omap3isp.md#controlling-the-omap-3-isp)
  - [7.12.4. Technical reference manuals (TRMs) and other documentation](omap3isp.md#technical-reference-manuals-trms-and-other-documentation)
  - [7.12.5. References](omap3isp.md#references)
- [7.13. OMAP4 ISS Driver](omap4_camera.md)
  - [7.13.1. Introduction](omap4_camera.md#introduction)
  - [7.13.2. Tested platforms](omap4_camera.md#tested-platforms)
  - [7.13.3. File list](omap4_camera.md#file-list)
  - [7.13.4. References](omap4_camera.md#references)
- [7.14. Philips webcams (pwc driver)](philips.md)
- [7.15. Qualcomm Camera Subsystem driver](qcom_camss.md)
  - [7.15.1. Introduction](qcom_camss.md#introduction)
  - [7.15.2. Qualcomm Camera Subsystem hardware](qcom_camss.md#qualcomm-camera-subsystem-hardware)
  - [7.15.3. Supported functionality](qcom_camss.md#supported-functionality)
  - [7.15.4. Driver Architecture and Design](qcom_camss.md#driver-architecture-and-design)
  - [7.15.5. Implementation](qcom_camss.md#implementation)
  - [7.15.6. Documentation](qcom_camss.md#documentation)
  - [7.15.7. References](qcom_camss.md#references)
- [7.16. Renesas R-Car Fine Display Processor (FDP1) Driver](rcar-fdp1.md)
- [7.17. Rockchip Image Signal Processor (rkisp1)](rkisp1.md)
  - [7.17.1. Introduction](rkisp1.md#introduction)
  - [7.17.2. Revisions](rkisp1.md#revisions)
  - [7.17.3. Topology](rkisp1.md#topology)
  - [7.17.4. Capturing Video Frames Example](rkisp1.md#capturing-video-frames-example)
  - [7.17.5. Configuring Quantization](rkisp1.md#configuring-quantization)
- [7.18. The saa7134 driver](saa7134.md)
  - [7.18.1. Status](saa7134.md#status)
  - [7.18.2. Build](saa7134.md#build)
  - [7.18.3. Changes / Fixes](saa7134.md#changes-fixes)
  - [7.18.4. Known Problems](saa7134.md#known-problems)
  - [7.18.5. Credits](saa7134.md#credits)
- [7.19. The Silicon Labs Si470x FM Radio Receivers driver](si470x.md)
  - [7.19.1. Information from Silicon Labs](si470x.md#information-from-silicon-labs)
  - [7.19.2. Supported ICs](si470x.md#supported-ics)
  - [7.19.3. Supported USB devices](si470x.md#supported-usb-devices)
  - [7.19.4. Software](si470x.md#software)
  - [7.19.5. Audio Listing](si470x.md#audio-listing)
  - [7.19.6. Module Parameters](si470x.md#module-parameters)
  - [7.19.7. Errors](si470x.md#errors)
  - [7.19.8. Open Issues](si470x.md#open-issues)
  - [7.19.9. Other useful information and links](si470x.md#other-useful-information-and-links)
- [7.20. The Silicon Labs Si4713 FM Radio Transmitter Driver](si4713.md)
  - [7.20.1. Information about the Device](si4713.md#information-about-the-device)
  - [7.20.2. Device driver description](si4713.md#device-driver-description)
  - [7.20.3. Properties description](si4713.md#properties-description)
  - [7.20.4. RNL](si4713.md#rnl)
  - [7.20.5. Stereo/Mono and RDS subchannels](si4713.md#stereo-mono-and-rds-subchannels)
  - [7.20.6. Testing](si4713.md#testing)
- [7.21. The SI476x Driver](si476x.md)
  - [7.21.1. TODO for the driver](si476x.md#todo-for-the-driver)
  - [7.21.2. Parameters exposed over debugfs](si476x.md#parameters-exposed-over-debugfs)
- [7.22. Starfive Camera Subsystem driver](starfive_camss.md)
  - [7.22.1. Introduction](starfive_camss.md#introduction)
  - [7.22.2. Starfive Camera Subsystem hardware](starfive_camss.md#starfive-camera-subsystem-hardware)
  - [7.22.3. Topology](starfive_camss.md#topology)
- [7.23. The Virtual Media Controller Driver (vimc)](vimc.md)
  - [7.23.1. Topology](vimc.md#topology)
  - [7.23.2. Subdevices](vimc.md#subdevices)
  - [7.23.3. Module options](vimc.md#module-options)
- [7.24. The Virtual Stateless Decoder Driver (visl)](visl.md)
  - [7.24.1. Module parameters](visl.md#module-parameters)
  - [7.24.2. What is the default use case for this driver?](visl.md#what-is-the-default-use-case-for-this-driver)
  - [7.24.3. Supported codecs](visl.md#supported-codecs)
  - [7.24.4. visl trace events](visl.md#visl-trace-events)
  - [7.24.5. Dumping OUTPUT buffer data through debugfs](visl.md#dumping-output-buffer-data-through-debugfs)
- [7.25. The Virtual Video Test Driver (vivid)](vivid.md)
  - [7.25.1. Configuring the driver](vivid.md#configuring-the-driver)
  - [7.25.2. Video Capture](vivid.md#video-capture)
  - [7.25.3. Video Output](vivid.md#video-output)
  - [7.25.4. VBI Capture](vivid.md#vbi-capture)
  - [7.25.5. VBI Output](vivid.md#vbi-output)
  - [7.25.6. Radio Receiver](vivid.md#radio-receiver)
  - [7.25.7. Radio Transmitter](vivid.md#radio-transmitter)
  - [7.25.8. Software Defined Radio Receiver](vivid.md#software-defined-radio-receiver)
  - [7.25.9. Metadata Capture](vivid.md#metadata-capture)
  - [7.25.10. Metadata Output](vivid.md#metadata-output)
  - [7.25.11. Touch Capture](vivid.md#touch-capture)
  - [7.25.12. Controls](vivid.md#controls)
  - [7.25.13. Video, VBI and RDS Looping](vivid.md#video-vbi-and-rds-looping)
  - [7.25.14. Cropping, Composing, Scaling](vivid.md#cropping-composing-scaling)
  - [7.25.15. Formats](vivid.md#formats)
  - [7.25.16. Capture Overlay](vivid.md#capture-overlay)
  - [7.25.17. Output Overlay](vivid.md#output-overlay)
  - [7.25.18. CEC (Consumer Electronics Control)](vivid.md#cec-consumer-electronics-control)
  - [7.25.19. Some Future Improvements](vivid.md#some-future-improvements)
